Bug 784466 -  [css3-animations] Drop declarations in keyframe rules that have !important. r=dbaron